--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sagacity Studio</title>
+    <title>Codigo</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -186,6 +186,15 @@
                     <span class="footer__link--sub">Organize learning sessions with us</span>
                 </a>
             </div>
+            <div class="footer__social">
+                <img src="img/Jo3kL5Z.svg" alt="">
+                <img src="img/y4Ebsdc.svg" alt="">
+                <img src="img/2p5F11U.svg" alt="">
+                <img src="img/2Tx_FSU.svg" alt="">
+            </div>
+            <p class="footer__copyright">
+                Copyright © Emma Popoola. All Rights Reserved
+            </p>
         </footer>
     </main>
 </body>
