--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav class="nav">
             <img src="img/logo.svg" alt="Sagacity logo" class="nav__logo">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#" class="nav__link">Work</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Solutions</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
+                <li class="nav__item"><a href="work.html" class="nav__link nav__link--light">Work</a></li>
+                <li class="nav__item"><a href="#" class="nav__link nav__link--light">Solutions</a></li>
+                <li class="nav__item"><a href="#" class="nav__link nav__link--light">Services</a></li>
+                <li class="nav__item"><a href="#" class="nav__link nav__link--light">About us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link nav__link--light">Blog</a></li>
                 <li class=""><a href="#" class="nav__link btn btn__rounded btn__rounded--dark">Request a quote</a></li>
             </ul>
         </nav>
