--- a/work.html
+++ b/work.html
@@ -14,7 +14,7 @@
         <nav class="nav">
             <a href="./" class="nav__logo"><img src="img/logo-color.svg" alt="Sagacity logo" class="nav__logoImage"></a>
             <ul class="nav__list">
-                <li class="nav__item"><a href="work.html" class="nav__link">Work</a></li>
+                <li class="nav__item"><a href="work.html" class="nav__link is-active">Work</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Solutions</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
